# humanoid-sensors-and-actuators

T1/: README.md
T1/code/: add512.S  main_asm_blink3_eff.S  main_asm_mirror.S  main_blink.c  main_blink3.c  main_mirror.c  main_uart_512bit_adder.c  main_uart_echo.c  main_uart_hello_world.c  uart.py  uart_512bit_adder.hex
T1/hsa_t1s1_ws-main/: .gitignore  CMakeLists.txt  readme.md
T1/hsa_t1s1_ws-main/.devcontainer/: devcontainer.json
T1/hsa_t1s1_ws-main/hex/: blink.hex
T1/hsa_t1s1_ws-main/src/gpio_asm/: CMakeLists.txt
T1/hsa_t1s1_ws-main/src/gpio_asm/src/applications/: main_asm_blink.S  main_asm_blink3.S
T1/hsa_t1s1_ws-main/src/gpio_c/: .gitignore  CMakeLists.txt
T1/hsa_t1s1_ws-main/src/gpio_c/src/applications/: main_mirror.c
T1/hsa_t1s1_ws-main/udev/: 97-ics-avr.rules  97-ics-fi1200.rules
T2/: README.md
T2/ltspice/: T2_1_RC_op.asc  T2_3_RC_tran.asc  T3_1_RC_ac.asc  T4_1_VD.asc  T4_2_VD.asc  T4_5_opamp.asc  T5_11_pln_filtered.asc  T5_1_sg.asc  T5_6_sg_opamp.asc  T5_8_pln.asc
